tests/miniJava/neg/000076_mutation.MiniJava
class java { new static void Main ( String [ ] java ) { { } } }
